<resources>
    <string name="app_name">安浪创想</string>
    <string name="action_settings">设置</string>
    <string name="scan_tips">\"将二维码图片对准扫描框即可自动扫描\"</string>
    <string name="url">http://www.anline.cn</string>
    <string name="ann">安浪</string>
    <string name="service">服务</string>
    <string name="find">发现</string>
    <string name="biz">商业</string>
    <string name="zone">空间</string>

    <string name="home_menu_website">官网</string>
    <string name="home_menu_case">展馆</string>
    <string name="home_menu_bbs">社区</string>
    <string name="home_menu_news">动态</string>
    <string name="home_menu_welfare">福利</string>

    <string name="ann_ecommerece">电商服务</string>
    <string name="ann_partner">合伙企业</string>
    <string name="ann_genius">专注领域</string>
    <string name="ann_develop">网站建设、APP开发、微信开发</string>
    <string name="ann_webdev">网站建设</string>
    <string name="ann_server_admin">服务器管理</string>
    <string name="ann_website_admin">网站管理</string>
    <string name="ann_shop_admin">网店管理</string>
    <string name="ann_edu">安浪教育</string>
    <string name="ann_vip">商业客户</string>
    <string name="ann_wexin_admin">微信管理</string>

    <string name="web_back">后退</string>
    <string name="web_forward">前进</string>
    <string name="web_share_qq">分享给QQ好友</string>
    <string name="web_share_qzone">分享到QQ空间</string>
    <string name="web_share_wechat">分享给微信好友</string>
    <string name="web_share_timeline">分享到朋友圈</string>
    <string name="web_share_weibo">分享到新浪微博</string>


    <string name="start_vpn">开启 VPN</string>
    <string name="stop_vpn">从状态栏停止</string>

    <string name="str_image_local">本地图片</string>
    <string name="syn_tech">领先技术</string>
    <string name="exam_room">模拟考场</string>
    <string name="famous_book">安浪教程</string>
    <string name="best_head">人工智能</string>
    <string name="user_manager">系统帐户</string>
    <string name="add_account">账戶充值</string>
    <string name="my_download">云数据</string>
    <string name="sys_setting">系统设置</string>
    <string name="about_us">关于我们</string>
    <string name="exception_timeout">网络超时</string>
    <string name="exception_parse">解析数据异常</string>
    <string name="phone_text">手机号码</string>
    <string name="password_text">输入密码</string>
    <string name="please_login_text">请登录</string>
    <string name="login">登录</string>
    <string name="reset">重置</string>
    <string name="ok">确认</string>
    <string name="no_register">还没有加入？</string>
    <string name="register_text">立即注册！</string>
    <string name="foget_password">忘记密码？</string>
    <string name="find_password">立即找回！</string>
    <string name="password_find">密码找回</string>
    <string name="user_register">用户注册</string>
    <string name="name_text">姓名</string>
    <string name="sex_text">性别</string>
    <string name="pwd_text">密码</string>
    <string name="repwd_text">确认密码</string>
    <string name="code_text">验证码</string>
    <string name="register">注册</string>
    <string name="boy_text">男</string>
    <string name="girl_text">女</string>
    <string name="get_code_text">获取验证码</string>
    <string name="new_password_to_phone">新密码发送至手机</string>
    <string name="card_text">卡号</string>
    <string name="card_pwd_text">卡密码</string>
    <string name="pay_account_text">充值账号</string>
    <string name="repay_account_text">账号确认</string>
    <string name="pay_account_ok">充值</string>
    <string name="card_number">欧科卡号：</string>
    <string name="account_number">账号：</string>
    <string name="pay_yes_or_no">是否确认充值？</string>
    <string name="introduce">软件介绍</string>
    <string name="check_update">检查更新</string>
    <string name="company_eng_name">OClass</string>
    <string name="copyright">深圳欧科科技有限公司版权所有</string>
    <string name="app_version">v1.0</string>
    <string name="default_setting">默认\n设置</string>
    <string name="base_text">基本介绍</string>
    <string name="download_text">下载安装</string>
    <string name="register_login_text">注册登录</string>
    <string name="server_phone">客服电话：400-0000-0000</string>

    <string name="sshusername">用户名</string>
    <string name="sshhostname">主机名</string>
    <string name="sshpassword">密码</string>
    <string name="sshconnect_btn">登录</string>
    <string name="up">上传</string>
    <string name="taskfail">命令执行失败</string>
    <string name="filetransfer">文件传输</string>

    <string-array name="sync_tech_array">
        <item>本地教材</item>
        <item>在线教材</item>
    </string-array>
    <string-array name="best_head_array">
        <item>游戏列表</item>
        <item>奖励记录</item>
        <item>最强排名</item>
    </string-array>
    <string-array name="download_array">
        <item>正在下载</item>
        <item>已下载</item>
    </string-array>
    <string-array name="exam_array">
        <item>模拟考场</item>
        <item>考试成绩</item>
        <item>答案解析</item>
    </string-array>
    <string-array name="famous_book_array">
        <item>本地书城</item>
        <item>在线书城</item>
    </string-array>
    <string-array name="setting_array">
        <item>主题色</item>
        <item>字体大小</item>
        <item>帮助</item>
    </string-array>

    <!--FTP server-->
    <string name="ifacesLabel">网络接口</string>
    <string name="ipAddrLabel">IP 地址</string>
    <string name="ifacesError">错误: </string>
    <string name="protocolLabel">协议</string>
    <string name="portLabel">端口</string>
    <string name="fingerprintsLabel">指纹锁</string>
    <string name="generateKeysMessage">生成密钥？</string>
    <string name="generatingKeysMessage">生成密钥 &#8230;</string>
    <string name="generate">生成</string>
    <string name="cancel">取消</string>
    <string name="state">状态</string>
    <string name="serverStarted">正在运行 &#8230;</string>
    <string name="serverStopped">已停止</string>

    <string name="startService">启动服务</string>
    <string name="stopService">停止服务</string>
    <string name="notificationTitle">FTP 服务器</string>

    <string name="haveToSetPassword">请先设置一个密码</string>
    <string name="serverRunning">FTP 服务正在运行</string>
    <string name="serverCouldNotBeStarted">服务不能运行，错误代码: </string>
    <string name="portInvalid_v2">端口号错误：范围1024-64000.</string>
    <string name="portsEqual_v2">端口号冲突，不能运行</string>
    <string name="restartServer">您必须重启服务才能使设置生效</string>
    <string name="invalidDir">目录设置错误</string>
    <string name="couldNotReadKeyAuthKey">公钥读取失败，请检查日志信息</string>

    <string name="prefs">参考</string>
    <string name="prefCategoryTitle">FTP服务器参考</string>
    <string name="prefTitleUser">用户名</string>
    <string name="prefSummaryUser">FTP服务器用户名</string>
    <string name="prefTitlePassword">密码</string>
    <string name="prefSummaryPassword">FTP服务器密码</string>
    <string name="prefTitlePort">端口</string>
    <string name="prefSummaryPort">FTP服务器端口</string>
    <string name="prefTitlePortSecure">安全端口</string>
    <string name="prefSummaryPortSecure">FTP服务器端口（已加密）</string>
    <string name="prefTitleStartDir">服务根目录</string>
    <string name="prefSummaryStartDir">登录后的目录</string>
    <string name="prefTitleAnnounce">局域网服务</string>
    <string name="prefSummaryAnnounce">服务器运行于 LAN via DNS-SD (Bonjour).可能会导致设备奔溃</string>
    <string name="prefTitleWakelock">防止待机</string>
    <string name="prefSummaryWakelock">当服务器正在运行时，防止待机（锁屏）。待机以后上传/下载会中止</string>
    <string name="prefTitleWhichServerToStart">服务已启动</string>
    <string name="prefSummaryWhichServerToStart">选择启动FTP/SFTP.</string>
    <string name="prefTitleStartOnBoot">同时启动</string>
    <string name="prefSummaryStartOnBoot">以系统服务运行</string>
    <string name="prefTitlePubKeyAuth">公钥认证</string>
    <string name="prefSummaryPubKeyAuth">在 ssh2 RSA 公钥下.ssh/authorized_key.pub. 只能启动SFTP.</string>
    <string name="prefTitleAnonymousLogin">匿名登录</string>
    <string name="prefSummaryAnonymousLogin">设置只允许匿名登录服务</string>
    <string name="prefTheme">主题</string>
    <string name="prefSummaryTheme">更改主题需要重启APP才能生效</string>
    <string name="prefTitleLogging">日志</string>
    <string name="prefSummaryLogging">可以通过日志分析失败原因，重启服务器解决问题</string>

    <string name="licence">版权</string>

    <string name="widgetTextStart">启动 SFTP/FTP</string>
    <string name="widgetTextStop">停止 SFTP/FTP</string>
    <string name="isAnonymous">匿名登录: %1$b</string>

    <string-array name="prefWhichServerToStartNames">
        <item>FTP 和 SFTP</item>
        <item>FTP</item>
        <item>SFTP</item>
    </string-array>

    <string-array name="prefWhichServerToStartValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="prefThemeNames">
        <item>高亮模式</item>
        <item>夜间模式</item>
    </string-array>

    <string-array name="prefThemeValues">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="prefLoggingNames">
        <item>无日志 Log</item>
        <item>文本日志</item>
        <item>安卓日志</item>
    </string-array>

    <string-array name="prefLoggingValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <!--FTP server-->
</resources>
