<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_start"
        android:orderInCategory="100"
        android:title="@string/startService"
        android:icon="?attr/iconStart" />

    <item
        android:id="@+id/menu_stop"
        android:orderInCategory="100"
        android:title="@string/stopService"
        android:icon="?attr/iconStop" />

    <item
        android:id="@+id/menu_prefs"
        android:orderInCategory="100"
        android:title="@string/prefs"
        android:icon="?attr/iconSettings" />

    <item
        android:id="@+id/menu_about"
        android:orderInCategory="100"
        android:title="关于" />

    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="100"
        android:title="退出" />
</menu>
