<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.anline.www.ann.OfficeWebsiteActivity">

    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/webView_office_website"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_Gray_light"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/web_back"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="2dp"
                android:src="@drawable/qrcode_web_back"
                android:id="@+id/ann_office_web_back" />
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="@color/bg_White" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/web_forward"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="2dp"
                android:src="@drawable/qrcode_web_forward"
                android:id="@+id/ann_office_web_forward" />
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="@color/bg_White" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/web_share_qq"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="2dp"
                android:src="@drawable/share_qq"
                android:id="@+id/ann_office_share_qq" />

        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="@color/bg_White" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/web_share_qzone"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="2dp"
                android:src="@drawable/share_qzone"
                android:id="@+id/ann_office_share_qzone" />

        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="@color/bg_White" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/web_share_wechat"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="2dp"
                android:src="@drawable/share_wechat"
                android:id="@+id/ann_office_share_wechat" />

        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="@color/bg_White" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/web_share_timeline"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="2dp"
                android:src="@drawable/share_timeline"
                android:id="@+id/ann_office_share_timeline" />

        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="@color/bg_White" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/web_share_weibo"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="2dp"
                android:src="@drawable/share_weibo"
                android:id="@+id/ann_office_share_weibo" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
