<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativelayout_image_slide"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/home_menu1"
        android:padding="5dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/home_menu1_iv"
            android:src="@drawable/home_menu1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textColor="@color/bg_White"
            android:id="@+id/home_menu1_tv"
            android:text="@string/home_menu_website"/>

    </LinearLayout>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="50dp"
        android:background="@color/bg_White" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/home_menu2"
        android:padding="5dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/home_menu2_iv"
            android:src="@drawable/home_menu2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textColor="@color/bg_White"
            android:id="@+id/home_menu2_tv"
            android:text="@string/home_menu_case"/>
    </LinearLayout>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="50dp"
        android:background="@color/bg_White" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/home_menu3"
        android:padding="5dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/home_menu3_iv"
            android:src="@drawable/home_menu3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textColor="@color/bg_White"
            android:id="@+id/home_menu3_tv"
            android:text="@string/home_menu_bbs"/>
    </LinearLayout>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="50dp"
        android:background="@color/bg_White" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/home_menu4"
        android:padding="5dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/home_menu4_iv"
            android:src="@drawable/home_menu4"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textColor="@color/bg_White"
            android:id="@+id/home_menu4_tv"
            android:text="@string/home_menu_news"/>
    </LinearLayout>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="50dp"
        android:background="@color/bg_White" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/home_menu5"
        android:padding="5dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/home_menu5_iv"
            android:src="@drawable/home_menu5"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textColor="@color/bg_White"
            android:id="@+id/home_menu5_tv"
            android:text="@string/home_menu_welfare"/>
    </LinearLayout>

</LinearLayout>